--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "vue": "2.6.10",
     "vue-class-component": "7.1.0",
     "vue-property-decorator": "8.3.0",
+    "vue-router": "3.1.3",
     "vue-template-compiler": "2.6.10",
     "vuejs-datepicker": "1.6.2",
     "vuex": "3.1.1",
