--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 .DS_Store
 node_modules
+build
 config
 dist
 data
@@ -15,5 +16,3 @@ workspace.xml
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-
-electron-*
