--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "async": "3.1.0",
     "body-parser": "latest",
     "compression": "1.7.4",
+    "connect-history-api-fallback": "1.6.0",
     "express": "4.17.1",
     "fecha": "3.0.3",
     "nodemailer": "6.4.2",
