--- a/package.json
+++ b/package.json
@@ -10,38 +10,38 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
-    "async": "3.1.0",
-    "body-parser": "latest",
+    "async": "3.1.1",
+    "body-parser": "1.19.0",
     "compression": "1.7.4",
     "connect-history-api-fallback": "1.6.0",
     "express": "4.17.1",
-    "fecha": "3.0.3",
+    "fecha": "4.1.0",
     "nodemailer": "6.4.2",
     "pug": "^2.0.4",
-    "puppeteer": "2.0.0"
+    "puppeteer": "2.1.1"
   },
   "devDependencies": {
-    "@fortawesome/fontawesome-free": "5.12.0",
-    "@prettier/plugin-pug": "1.1.4",
-    "@types/jest": "24.9.0",
-    "@typescript-eslint/eslint-plugin": "2.16.0",
-    "@typescript-eslint/parser": "2.16.0",
-    "@vue/cli-plugin-babel": "4.1.2",
-    "@vue/cli-plugin-eslint": "4.1.2",
-    "@vue/cli-plugin-typescript": "4.1.2",
-    "@vue/cli-plugin-unit-jest": "4.1.2",
-    "@vue/cli-service": "4.1.2",
+    "@fortawesome/fontawesome-free": "5.12.1",
+    "@prettier/plugin-pug": "1.1.8",
+    "@types/jest": "25.1.2",
+    "@typescript-eslint/eslint-plugin": "2.19.2",
+    "@typescript-eslint/parser": "2.19.2",
+    "@vue/cli-plugin-babel": "4.2.2",
+    "@vue/cli-plugin-eslint": "4.2.2",
+    "@vue/cli-plugin-typescript": "4.2.2",
+    "@vue/cli-plugin-unit-jest": "4.2.2",
+    "@vue/cli-service": "4.2.2",
     "@vue/eslint-config-prettier": "6.0.0",
     "@vue/eslint-config-typescript": "5.0.1",
-    "@vue/test-utils": "1.0.0-beta.30",
+    "@vue/test-utils": "1.0.0-beta.31",
     "babel-eslint": "10.0.3",
-    "babel-jest": "24.9.0",
+    "babel-jest": "25.1.0",
     "bootstrap": "4.4.1",
-    "bootstrap-vue": "2.2.2",
+    "bootstrap-vue": "2.4.1",
     "core-js": "3.6.4",
     "cross-fetch": "3.0.4",
-    "electron": "7.1.9",
-    "electron-builder": "22.2.0",
+    "electron": "8.0.1",
+    "electron-builder": "22.3.2",
     "eslint": "6.8.0",
     "eslint-plugin-prettier": "3.1.2",
     "eslint-plugin-vue": "6.1.2",
@@ -49,13 +49,12 @@
     "node-sass": "4.13.1",
     "prettier": "1.19.1",
     "pug-plain-loader": "1.0.0",
-    "sass": "1.24.5",
+    "sass": "1.25.0",
     "sass-loader": "8.0.2",
-    "ts-jest": "24.3.0",
     "typescript": "3.7.5",
     "vue": "2.6.11",
-    "vue-class-component": "7.2.2",
-    "vue-property-decorator": "8.3.0",
+    "vue-class-component": "7.2.3",
+    "vue-property-decorator": "8.4.0",
     "vue-router": "3.1.5",
     "vue-template-compiler": "2.6.11",
     "vuejs-datepicker": "1.6.2",
