--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "vue-property-decorator": "8.4.0",
     "vue-router": "3.1.5",
     "vue-template-compiler": "2.6.11",
+    "vue-unique-id": "2.0.0",
     "vuejs-datepicker": "1.6.2",
     "vuex": "3.1.2",
     "vuex-class": "0.3.2"
