--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "connect-history-api-fallback": "1.6.0",
     "express": "4.17.1",
     "fecha": "4.2.0",
-    "nodemailer": "6.4.5",
+    "marked": "0.8.1",
+    "nodemailer": "6.4.6",
     "pug": "^2.0.4",
     "puppeteer": "2.1.1"
   },
@@ -24,8 +25,10 @@
     "@electron/typescript-definitions": "8.6.6",
     "@fortawesome/fontawesome-free": "5.12.1",
     "@prettier/plugin-pug": "1.1.10",
-    "@typescript-eslint/eslint-plugin": "2.23.0",
-    "@typescript-eslint/parser": "2.23.0",
+    "@types/marked": "0.7.3",
+    "@types/codemirror": "0.0.88",
+    "@typescript-eslint/eslint-plugin": "2.24.0",
+    "@typescript-eslint/parser": "2.24.0",
     "@vue/cli-plugin-babel": "4.2.3",
     "@vue/cli-plugin-eslint": "4.2.3",
     "@vue/cli-plugin-typescript": "4.2.3",
@@ -36,6 +39,7 @@
     "babel-eslint": "10.1.0",
     "bootstrap": "4.4.1",
     "bootstrap-vue": "2.7.0",
+    "codemirror": "5.52.2",
     "core-js": "3.6.4",
     "cross-fetch": "3.0.4",
     "electron": "8.1.1",
@@ -45,14 +49,14 @@
     "eslint-plugin-vue": "6.2.2",
     "fibers": "4.0.2",
     "node-sass": "4.13.1",
-    "prettier": "1.19.1",
+    "prettier": "2.0.1",
     "pug-plain-loader": "1.0.0",
     "sass": "1.26.3",
     "sass-loader": "8.0.2",
     "typescript": "3.8.3",
     "vue": "2.6.11",
     "vue-class-component": "7.2.3",
-    "vue-property-decorator": "8.4.0",
+    "vue-property-decorator": "8.4.1",
     "vue-router": "3.1.6",
     "vue-template-compiler": "2.6.11",
     "vue-unique-id": "3.0.0",
