--- a/package.json
+++ b/package.json
@@ -23,53 +23,53 @@
     "puppeteer": "2.1.1"
   },
   "devDependencies": {
-    "@electron/typescript-definitions": "8.7.2",
+    "@electron/typescript-definitions": "8.7.4",
     "@fortawesome/fontawesome-free": "5.13.0",
     "@prettier/plugin-pug": "1.2.0",
-    "@types/codemirror": "0.0.90",
-    "@types/jest": "25.2.1",
-    "@types/marked": "0.7.3",
-    "@typescript-eslint/eslint-plugin": "2.26.0",
-    "@typescript-eslint/parser": "2.26.0",
-    "@vue/cli-plugin-babel": "4.2.3",
-    "@vue/cli-plugin-eslint": "4.2.3",
-    "@vue/cli-plugin-typescript": "4.2.3",
-    "@vue/cli-service": "4.2.3",
+    "@types/codemirror": "0.0.93",
+    "@types/jest": "25.2.2",
+    "@types/marked": "0.7.4",
+    "@typescript-eslint/eslint-plugin": "2.33.0",
+    "@typescript-eslint/parser": "2.33.0",
+    "@vue/cli-plugin-babel": "4.3.1",
+    "@vue/cli-plugin-eslint": "4.3.1",
+    "@vue/cli-plugin-typescript": "4.3.1",
+    "@vue/cli-service": "4.3.1",
     "@vue/eslint-config-prettier": "6.0.0",
     "@vue/eslint-config-typescript": "5.0.2",
-    "@vue/test-utils": "1.0.0-beta.32",
+    "@vue/test-utils": "1.0.2",
     "babel-core": "6.26.3",
     "babel-eslint": "10.1.0",
-    "bootstrap": "4.4.1",
-    "bootstrap-vue": "2.10.1",
-    "codemirror": "5.52.2",
-    "core-js": "3.6.4",
+    "bootstrap": "4.5.0",
+    "bootstrap-vue": "2.14.0",
+    "codemirror": "5.53.2",
+    "core-js": "3.6.5",
     "cross-fetch": "3.0.4",
-    "electron": "8.2.0",
-    "electron-builder": "22.4.1",
-    "eslint": "6.8.0",
-    "eslint-plugin-prettier": "3.1.2",
+    "electron": "8.3.0",
+    "electron-builder": "22.6.0",
+    "eslint": "7.0.0",
+    "eslint-plugin-prettier": "3.1.3",
     "eslint-plugin-vue": "6.2.2",
     "fibers": "4.0.2",
-    "jest": "25.2.7",
+    "jest": "26.0.1",
     "jest-serializer-vue": "2.0.2",
     "jest-transform-stub": "2.0.0",
-    "jest-watch-typeahead": "0.5.0",
-    "node-sass": "4.13.1",
-    "prettier": "2.0.2",
+    "jest-watch-typeahead": "0.6.0",
+    "node-sass": "4.14.1",
+    "prettier": "2.0.5",
     "pug-plain-loader": "1.0.0",
-    "sass": "1.26.3",
+    "sass": "1.26.5",
     "sass-loader": "8.0.2",
-    "ts-jest": "25.3.1",
-    "typescript": "3.8.3",
+    "ts-jest": "26.0.0",
+    "typescript": "3.9.2",
     "vue": "2.6.11",
     "vue-class-component": "7.2.3",
     "vue-jest": "3.0.5",
-    "vue-property-decorator": "8.4.1",
+    "vue-property-decorator": "8.4.2",
     "vue-router": "3.1.6",
     "vue-template-compiler": "2.6.11",
-    "vue-unique-id": "3.0.0",
-    "vuex": "3.1.3",
+    "vue-unique-id": "3.1.0",
+    "vuex": "3.4.0",
     "vuex-class": "0.3.2"
   },
   "jest": {
