--- a/package.json
+++ b/package.json
@@ -17,59 +17,59 @@
     "connect-history-api-fallback": "1.6.0",
     "express": "4.17.1",
     "fecha": "4.2.0",
-    "marked": "1.0.0",
-    "nodemailer": "6.4.6",
-    "pug": "^2.0.4",
-    "puppeteer": "3.0.4"
+    "marked": "1.1.1",
+    "nodemailer": "6.4.11",
+    "pug": "3.0.0",
+    "puppeteer": "5.2.1"
   },
   "devDependencies": {
-    "@electron/typescript-definitions": "8.7.4",
-    "@fortawesome/fontawesome-free": "5.13.0",
-    "@prettier/plugin-pug": "1.2.0",
-    "@types/codemirror": "0.0.93",
-    "@types/jest": "25.2.2",
-    "@types/marked": "0.7.4",
-    "@typescript-eslint/eslint-plugin": "2.33.0",
-    "@typescript-eslint/parser": "2.33.0",
-    "@vue/cli-plugin-babel": "4.3.1",
-    "@vue/cli-plugin-eslint": "4.3.1",
-    "@vue/cli-plugin-typescript": "4.3.1",
-    "@vue/cli-service": "4.3.1",
+    "@electron/typescript-definitions": "8.7.5",
+    "@fortawesome/fontawesome-free": "5.14.0",
+    "@prettier/plugin-pug": "1.5.1",
+    "@types/codemirror": "0.0.97",
+    "@types/jest": "26.0.10",
+    "@types/marked": "1.1.0",
+    "@typescript-eslint/eslint-plugin": "3.10.1",
+    "@typescript-eslint/parser": "3.10.1",
+    "@vue/cli-plugin-babel": "4.5.4",
+    "@vue/cli-plugin-eslint": "4.5.4",
+    "@vue/cli-plugin-typescript": "4.5.4",
+    "@vue/cli-service": "4.5.4",
     "@vue/eslint-config-prettier": "6.0.0",
-    "@vue/eslint-config-typescript": "5.0.2",
-    "@vue/test-utils": "1.0.2",
+    "@vue/eslint-config-typescript": "5.1.0",
+    "@vue/test-utils": "1.0.4",
     "babel-core": "6.26.3",
     "babel-eslint": "10.1.0",
-    "bootstrap": "4.5.0",
-    "bootstrap-vue": "2.14.0",
-    "codemirror": "5.53.2",
+    "bootstrap": "4.5.2",
+    "bootstrap-vue": "2.16.0",
+    "codemirror": "5.57.0",
     "core-js": "3.6.5",
-    "cross-fetch": "3.0.4",
-    "electron": "8.3.0",
-    "electron-builder": "22.6.0",
-    "eslint": "7.0.0",
-    "eslint-plugin-prettier": "3.1.3",
+    "cross-fetch": "3.0.5",
+    "electron": "10.0.0",
+    "electron-builder": "22.8.0",
+    "eslint": "7.7.0",
+    "eslint-plugin-prettier": "3.1.4",
     "eslint-plugin-vue": "6.2.2",
     "fibers": "5.0.0",
-    "jest": "26.0.1",
+    "jest": "26.4.2",
     "jest-serializer-vue": "2.0.2",
     "jest-transform-stub": "2.0.0",
     "jest-watch-typeahead": "0.6.0",
     "node-sass": "4.14.1",
-    "prettier": "2.0.5",
+    "prettier": "2.1.1",
     "pug-plain-loader": "1.0.0",
-    "sass": "1.26.5",
-    "sass-loader": "8.0.2",
-    "ts-jest": "26.0.0",
-    "typescript": "3.9.2",
-    "vue": "2.6.11",
-    "vue-class-component": "7.2.3",
-    "vue-jest": "3.0.5",
-    "vue-property-decorator": "8.4.2",
-    "vue-router": "3.1.6",
-    "vue-template-compiler": "2.6.11",
-    "vue-unique-id": "3.1.0",
-    "vuex": "3.4.0",
+    "sass": "1.26.10",
+    "sass-loader": "10.0.1",
+    "ts-jest": "26.3.0",
+    "typescript": "4.0.2",
+    "vue": "2.6.12",
+    "vue-class-component": "7.2.5",
+    "vue-jest": "3.0.6",
+    "vue-property-decorator": "9.0.0",
+    "vue-router": "3.4.3",
+    "vue-template-compiler": "2.6.12",
+    "vue-unique-id": "3.1.1",
+    "vuex": "3.5.1",
     "vuex-class": "0.3.2"
   },
   "jest": {
